fix: US151362 - Fix offscreen RTL scrollbar issue for browsers that support CSS Logical Properties (#3542)
* Fix visual-diff tests to actually test the RTL styles
* Add inset-inline-start to fix scrollbar issue on newer browsers

--- a/components/offscreen/offscreen.scss
+++ b/components/offscreen/offscreen.scss
@@ -3,6 +3,7 @@
 	$offset: -10000px;
 
 	position: absolute !important;
+	inset-inline-start: $offset;
 	left: $offset;
 	overflow: hidden;
 	width: 1px;
